2008-12-19  Thomas Thurman  <tthurman@gnome.org>

	* src/ui/frames.c: when the user double-clicks the title bar,
	  end the grab op.  Closes #401028.

2008-12-16  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.89.

2008-12-16  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.55 release.

2008-12-15  Erwann Chenede  <erwann.chenede@sun.com>

	* configure.in: fix build on Solaris.  Closes #564123.

2008-12-02  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.55.

2008-12-02  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.34 release.

2008-12-02  Matt Kraai  <kraai@ftbfs.org>

	* src/core/iconcache.c: patches to fixes for -Wall.  Closes #562939.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.34.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.21 release.

2008-12-01  Thomas Thurman  <tthurman@gnome.org>

	* configure.in: gnome-doc-tools version doesn't need to be so high.
	* src/compositor/compositor-xrender.c: disable the entire file if the
          compositor is disabled.
	* src/core/async-getprop.[ch]: fixes for -Wall
	* src/core/iconcache.c: fixes for -Wall
	* src/core/testasyncgetprop.c: fixes for -Wall
	* src/core/xprops.c: fixes for -Wall

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py: linked language codes to po files
	* tools/commit-wrangler.py: print revision url

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py: renamed ini file
	* tools/commit-wrangler.py: rewriting in terms of moap

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.25.21.

2008-11-25  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.25.13 release.

2008-11-26  Thomas Thurman  <tthurman@gnome.org>

	* tools/announce-wrangler.py (added): script to produce announcements
